# kinpoSem

./: .gitignore  Action.cpp  Action.h  ActionError.cpp  ActionError.h  ActionsFromXML.cpp  ActionsFromXML.h  BigRealNumber.cpp  BigRealNumber.h  CMakeLists.txt  ImportActions.cpp  ImportActions.h  Qt.sln  Qt.vcxproj  Qt.vcxproj.filters  README.md  ResultActionsToTxt.cpp  ResultActionsToTxt.h  StdStringsToTxt.cpp  StdStringsToTxt.h  ar.drawio  autobuild.bat  diagrams.drawio  kinpoSem.cpp  kinpoSem.sln  kinpoSem.vcxproj  kinpoSem.vcxproj.filters  main.cpp  profile_actions.xml  test.txt  test.xml  диаграммы.drawio
bat_test/: test.xml  tests.bat
doxygen/html/: _action_8cpp.html  _action_8h.html  _action_8h_source.html  _action_error_8cpp.html  _action_error_8h.html  _action_error_8h_source.html  _actions_from_x_m_l_8cpp.html  _actions_from_x_m_l_8h.html  _actions_from_x_m_l_8h_source.html  _big_real_number_8cpp.html  _big_real_number_8h.html  _big_real_number_8h_source.html  _std_strings_to_txt_8cpp.html  _std_strings_to_txt_8h.html  _std_strings_to_txt_8h_source.html  annotated.html  class_action-members.html  class_action.html  class_action_build_error-members.html  class_action_build_error.html  class_action_error-members.html  class_action_error.html  class_action_perform_error-members.html  class_action_perform_error.html  class_actions_from_x_m_l-members.html  class_actions_from_x_m_l.html  class_big_real_number-members.html  class_big_real_number.html  class_std_string_to_txt-members.html  class_std_string_to_txt.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  (+6 more)
doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  enumvalues_9.js  enumvalues_a.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  (+11 more)
doxygen/latex/: _action_8cpp.tex  _action_8h.tex  _action_8h_source.tex  _action_error_8cpp.tex  _action_error_8h.tex  _action_error_8h_source.tex  _actions_from_x_m_l_8cpp.tex  _actions_from_x_m_l_8h.tex  _actions_from_x_m_l_8h_source.tex  _big_real_number_8cpp.tex  _big_real_number_8h.tex  _big_real_number_8h_source.tex  _std_strings_to_txt_8cpp.tex  _std_strings_to_txt_8h.tex  _std_strings_to_txt_8h_source.tex  annotated.tex  class_action.tex  class_action_build_error.eps  class_action_build_error.tex  class_action_error.eps  class_action_error.tex  class_action_perform_error.eps  class_action_perform_error.tex  class_actions_from_x_m_l.tex  class_big_real_number.tex  class_std_string_to_txt.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  hierarchy.tex  main_8cpp.tex  refman.tex
include/: Action.h  ActionError.h  ActionsFromXML.h  BigRealNumber.h  StdStringsToTxt.h
src/: Action.cpp  ActionError.cpp  ActionsFromXML.cpp  BigRealNumber.cpp  StdStringsToTxt.cpp  main.cpp
test/: test.vcxproj
test_case/: BRN_run.bat
tests/: ActionFromXMLTests.cpp  ActionFromXMLTests.h  ActionsFromXMLTests.cpp  ActionsFromXMLTests.h  BigRealNumberTests.cpp  BigRealNumberTests.h  CMakeLists.txt  simple_case_test.xml  testInstruments.cpp  testInstruments.h  tests_main.cpp
tests/xml/: invalid_arity_test.xml  missing_operand_test.xml  simple_case_test.xml  unknown_operator_test.xml
